Add a build summary step and document the CI pipeline
The pipeline is green: core tests, assembleDebug, app unit tests,
lint, assembleRelease with R8 and bundleRelease all pass, and an AAB
is produced.

Replaces the mid-job signing report with a build summary as the last
step, writing the AAB path and size, whether an upload key signed it,
whether production AdMob IDs were configured, and the bundle's public
certificate to both the log tail and the job summary. Those numbers
were previously buried in the middle of a very long log.

README gains the CI section, the required secrets, and the toolchain
the build actually needs - notably JDK 21, which Robolectric requires
to sandbox SDK 36 even though the app still targets 17 bytecode.

AGENT_HANDOFF_LOG records all nine defects the first real compile
exposed, including two genuine bugs in the tests themselves: a fake
Clock whose getZone() recursed into itself, and a multiple-breaks case
that asserted a total its own timeline could not produce.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018TMiDr32NLsyJ9ej6wry2a